--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 if (WIN32)
-    list(PREPEND CMAKE_PREFIX_PATH ${${PRJPREFIX}_QT_DIR})
+    list(PREPEND CMAKE_PREFIX_PATH ${${PROJECT_PREFIX}_QT_DIR})
     set(QT_INSTALL_PATH "${CMAKE_PREFIX_PATH}")
     if (NOT EXISTS "${QT_INSTALL_PATH}/bin")
         set(QT_INSTALL_PATH "${QT_INSTALL_PATH}/..")
@@ -28,7 +28,7 @@ FOREACH (child ${children})
         IF ("${SRCS} " STREQUAL " ")
             message(STATUS "Test folder '${child}' is empty, skipping")
         ELSE ()
-            set(${child}_exe ${PRJPREFIX_LOWER}_${child}_unit_test)
+            set(${child}_exe ${PROJECT_PREFIX_LOWER}_${child}_unit_test)
             add_executable(${${child}_exe} ${SRCS})
             target_include_directories(${${child}_exe} PUBLIC test_helper)
             target_link_libraries(${${child}_exe} GTest::gtest)
@@ -43,22 +43,22 @@ FOREACH (child ${children})
                 endif ()
             endif ()
             if (CMAKE_SYSTEM_NAME MATCHES "Linux")
-                set(${PRJPREFIX_LOWER}_${child}_test_command export DISPLAY=':0' && ./${${child}_exe} --gtest_output=xml:${CMAKE_CURRENT_BINARY_DIR}/${child}_UTest_Report.xml)
+                set(${PROJECT_PREFIX_LOWER}_${child}_test_command export DISPLAY=':0' && ./${${child}_exe} --gtest_output=xml:${CMAKE_CURRENT_BINARY_DIR}/${child}_UTest_Report.xml)
             else ()
-                set(${PRJPREFIX_LOWER}_${child}_test_command ./${${child}_exe} --gtest_output=xml:${CMAKE_CURRENT_BINARY_DIR}/${child}_UTest_Report.xml)
+                set(${PROJECT_PREFIX_LOWER}_${child}_test_command ./${${child}_exe} --gtest_output=xml:${CMAKE_CURRENT_BINARY_DIR}/${child}_UTest_Report.xml)
             endif ()
-            add_test(${PRJPREFIX_LOWER}_${child}_UTests ${${PRJPREFIX_LOWER}_${child}_test_command})
-            set_tests_properties(${PRJPREFIX_LOWER}_${child}_UTests PROPERTIES TIMEOUT 3600)
+            add_test(${PROJECT_PREFIX_LOWER}_${child}_UTests ${${PROJECT_PREFIX_LOWER}_${child}_test_command})
+            set_tests_properties(${PROJECT_PREFIX_LOWER}_${child}_UTests PROPERTIES TIMEOUT 3600)
             add_dependencies(All_Tests ${${child}_exe})
             add_custom_command(TARGET All_Tests POST_BUILD
-                    COMMAND ${${PRJPREFIX_LOWER}_${child}_test_command}
+                    COMMAND ${${PROJECT_PREFIX_LOWER}_${child}_test_command}
                     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
         ENDIF ()
     ENDIF ()
 ENDFOREACH ()
 
-if (${PRJPREFIX}_COVERAGE)
+if (${PROJECT_PREFIX}_COVERAGE)
     set(COVERAGE_RESULT_DIR ${CMAKE_BINARY_DIR}/Coverage)
     file(MAKE_DIRECTORY ${COVERAGE_RESULT_DIR})
     set(COVERAGE_TITLE \"Evenement Loto: couverture de tests\")
