--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,18 +6,24 @@ file(GLOB_RECURSE
         SRCS
         ${CMAKE_CURRENT_SOURCE_DIR}/core/*.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/core/*.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/basedefine.h
 )
 add_library(${CMAKE_PROJECT_NAME}_lib ${SRCS})
 target_include_directories(${CMAKE_PROJECT_NAME}_lib PUBLIC .)
 target_link_libraries(${CMAKE_PROJECT_NAME}_lib PUBLIC ${CMAKE_PROJECT_NAME}_Base)
+# precompiled headers
+if (NOT ${PROJECT_PREFIX}_ENABLE_CLANG_TIDY)
+    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/pch.h")
+        target_precompile_headers(${CMAKE_PROJECT_NAME}_lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/pch.h)
+    endif ()
+endif ()
 
 # ----==== third party ====----
 # json
+find_package(jsoncpp REQUIRED)
+message(STATUS "Found jsoncpp")
+target_link_libraries(${CMAKE_PROJECT_NAME}_lib PUBLIC jsoncpp_static)
 
-#fmt
-#find_package(fmt REQUIRED)
-#message(STATUS "Found fmt")
-#target_link_libraries(${CMAKE_PROJECT_NAME}_lib PUBLIC fmt::fmt)
 
 #spdlog
 find_package(spdlog REQUIRED)
@@ -46,6 +52,12 @@ add_library(${CMAKE_PROJECT_NAME}_ui ${SRCS_UI})
 target_link_libraries(${CMAKE_PROJECT_NAME}_ui
         ${CMAKE_PROJECT_NAME}_lib
 )
+# precompiled headers
+if (NOT ${PROJECT_PREFIX}_ENABLE_CLANG_TIDY)
+    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/pch.h")
+        target_precompile_headers(${CMAKE_PROJECT_NAME}_ui INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/pch.h)
+    endif ()
+endif ()
 qt_attach_to_target(${CMAKE_PROJECT_NAME}_ui)
 #  UI Library
 #
