--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 if (WIN32)
-    list(PREPEND CMAKE_PREFIX_PATH ${${PRJPREFIX}_QT_DIR})
+    list(PREPEND CMAKE_PREFIX_PATH ${${PROJECT_PREFIX}_QT_DIR})
     set(QT_INSTALL_PATH "${CMAKE_PREFIX_PATH}")
     if (NOT EXISTS "${QT_INSTALL_PATH}/bin")
         set(QT_INSTALL_PATH "${QT_INSTALL_PATH}/..")
@@ -10,26 +10,28 @@ if (WIN32)
     endif ()
 endif ()
 
-FILE(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
+file(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
 
 add_custom_target(All_Tests)
 # googletest
-find_package(GTest 1.13 REQUIRED)
+find_package(GTest REQUIRED)
 
-FOREACH (child ${children})
+foreach (child ${children})
     if (${child} MATCHES "test_helper")
         continue()
     endif ()
-    IF (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${child})
+    if (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${child})
         file(GLOB_RECURSE
                 SRCS
                 ${CMAKE_CURRENT_SOURCE_DIR}/${child}/*.cpp
         )
-        IF ("${SRCS} " STREQUAL " ")
+        if ("${SRCS} " STREQUAL " ")
             message(STATUS "Test folder '${child}' is empty, skipping")
-        ELSE ()
-            set(${child}_exe ${PRJPREFIX_LOWER}_${child}_unit_test)
+        else ()
+            set(${child}_exe ${PROJECT_PREFIX_LOWER}_${child}_unit_test)
             add_executable(${${child}_exe} ${SRCS})
+            set_target_properties(${${child}_exe} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+            set_target_properties(${${child}_exe} PROPERTIES FOLDER "UnitTests")
             target_include_directories(${${child}_exe} PUBLIC test_helper)
             target_link_libraries(${${child}_exe} GTest::gtest)
             target_link_libraries(${${child}_exe} ${CMAKE_PROJECT_NAME}_lib)
@@ -42,38 +44,47 @@ FOREACH (child ${children})
                     )
                 endif ()
             endif ()
-            if (CMAKE_SYSTEM_NAME MATCHES "Linux")
-                set(${PRJPREFIX_LOWER}_${child}_test_command export DISPLAY=':0' && ./${${child}_exe} --gtest_output=xml:${CMAKE_CURRENT_BINARY_DIR}/${child}_UTest_Report.xml)
-            else ()
-                set(${PRJPREFIX_LOWER}_${child}_test_command ./${${child}_exe} --gtest_output=xml:${CMAKE_CURRENT_BINARY_DIR}/${child}_UTest_Report.xml)
+            set(${PROJECT_PREFIX_LOWER}_${child}_test_command ${CMAKE_BINARY_DIR}/bin/${${child}_exe} --gtest_output=xml:${CMAKE_CURRENT_BINARY_DIR}/${child}_UTest_Report.xml)
+            add_test(${PROJECT_PREFIX_LOWER}_${child}_UTests ${${PROJECT_PREFIX_LOWER}_${child}_test_command})
+            set_tests_properties(${PROJECT_PREFIX_LOWER}_${child}_UTests PROPERTIES TIMEOUT 3600)
+            if (${PROJECT_PREFIX}_BUILD_SHARED AND WIN32)
+                add_custom_command(TARGET ${${child}_exe} POST_BUILD
+                        COMMAND ${CMAKE_COMMAND} -E copy_if_different "${GTest_DIR}/../../../bin/libgtest$<$<CONFIG:Debug>:d>.dll" "${CMAKE_BINARY_DIR}/bin"
+                        COMMAND_EXPAND_LISTS
+                )
             endif ()
-            add_test(${PRJPREFIX_LOWER}_${child}_UTests ${${PRJPREFIX_LOWER}_${child}_test_command})
-            set_tests_properties(${PRJPREFIX_LOWER}_${child}_UTests PROPERTIES TIMEOUT 3600)
+
             add_dependencies(All_Tests ${${child}_exe})
             add_custom_command(TARGET All_Tests POST_BUILD
-                    COMMAND ${${PRJPREFIX_LOWER}_${child}_test_command}
+                    COMMAND ${${child}_exe}
                     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
         ENDIF ()
     ENDIF ()
 ENDFOREACH ()
 
-if (${PRJPREFIX}_COVERAGE)
+if (${PROJECT_PREFIX}_ENABLE_COVERAGE)
+
     set(COVERAGE_RESULT_DIR ${CMAKE_BINARY_DIR}/Coverage)
     file(MAKE_DIRECTORY ${COVERAGE_RESULT_DIR})
-    set(COVERAGE_TITLE \"Evenement Loto: couverture de tests\")
-    set(COVERAGE_HTML --html --html-details --html-details-syntax-highlighting --html-title ${COVERAGE_TITLE} --source-encoding utf-8)
-    set(COVERAGE_FILTER -e \".*third_party/.*\" -e \".*test/.*\" -e \".*autogen.*\" -e \".*main\.cpp\")
-    set(COVERAGE_OPTION -buds -j 4 --exclude-throw-branches --exclude-unreachable-branches --exclude-lines-by-pattern \".*---UNCOVER---.*\")
-    if (${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
-        #        set(COVERAGE_GCOV --gcov-executable \"llvm-cov gcov\" --gcov-ignore-parse-errors)
+    if ("d${${PROJECT_PREFIX}_GCOV}" STREQUAL "d")
+        if (${PROJECT_PREFIX}_COMPILER_GCC)
+            set(COVERAGE_GCOV "gcov")
+        elseif (${PROJECT_PREFIX}_COMPILER_CLANG)
+            set(COVERAGE_GCOV "llvm gcov")
+        endif ()
     else ()
-        set(COVERAGE_GCOV)
+        set(COVERAGE_GCOV "${${PROJECT_PREFIX}_GCOV}")
     endif ()
+    set(CMD ${GCOVR} -r ${CMAKE_SOURCE_DIR} -o ${COVERAGE_RESULT_DIR}/index.html --gcov-executable ${COVERAGE_GCOV} .)
+
     add_custom_command(TARGET All_Tests POST_BUILD
-            COMMAND ${GCOVR} ${COVERAGE_OPTION} -r ${CMAKE_SOURCE_DIR} -o ${COVERAGE_RESULT_DIR}/index.html ${COVERAGE_GCOV} ${COVERAGE_HTML} ${COVERAGE_FILTER} .
+            COMMAND echo "command: '${CMD}'")
+    add_custom_command(TARGET All_Tests POST_BUILD
+            COMMAND ${CMD}
+            COMMAND_EXPAND_LISTS
             WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
             USES_TERMINAL)
     add_custom_command(TARGET All_Tests POST_BUILD
-            COMMAND echo \"look at the coverage result: file:///${COVERAGE_RESULT_DIR}/index.html\")
+            COMMAND echo "look at the coverage result: file:///${COVERAGE_RESULT_DIR}/index.html")
 endif ()
