Adding functional toolbar and status bar with icon system.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -93,6 +93,19 @@ target_link_libraries(${CMAKE_PROJECT_NAME}_ui_imgui PRIVATE imgui::imgui)
 find_package(glfw3 REQUIRED)
 message(STATUS "Found glfw3: ${glfw3_DIR} (found version: ${glfw3_VERSION})")
 target_link_libraries(${CMAKE_PROJECT_NAME}_ui_imgui PRIVATE glfw)
+
+find_package(stb_image REQUIRED)
+message(STATUS "Found stb_image: ${stb_image_DIR} (found version: ${stb_image_VERSION})")
+target_link_libraries(${CMAKE_PROJECT_NAME}_ui_imgui PRIVATE stb_image::stb_image)
+
+add_custom_command(TARGET ${CMAKE_PROJECT_NAME}_ui_imgui POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        "${CMAKE_CURRENT_SOURCE_DIR}/resources/darkicons"
+        "$<TARGET_FILE_DIR:${CMAKE_PROJECT_NAME}>/resources/darkicons"
+        COMMENT "Copying Icon resources..."
+        VERBATIM
+)
+
 #  ImGUI UI Library
 #
 target_link_vulkan(${CMAKE_PROJECT_NAME}_ui_imgui PUBLIC)
