--- a/depmanager.yml
+++ b/depmanager.yml
@@ -21,6 +21,8 @@ packages:
   spdlog:
     version: 1.16.0
     kind: "static"
+  stb_image:
+    version: 2.28
   vulkan_sdk:
     version: 1.4.328
     kind: "shared"
