--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -98,6 +98,10 @@ find_package(stb_image REQUIRED)
 message(STATUS "Found stb_image: ${stb_image_DIR} (found version: ${stb_image_VERSION})")
 target_link_libraries(${CMAKE_PROJECT_NAME}_ui_imgui PRIVATE stb_image::stb_image)
 
+find_package(nfd REQUIRED)
+message(STATUS "Found nfd: ${nfd_DIR}")
+target_link_libraries(${CMAKE_PROJECT_NAME}_ui_imgui PRIVATE nfd::nfd)
+
 add_custom_command(TARGET ${CMAKE_PROJECT_NAME}_ui_imgui POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
         "${CMAKE_CURRENT_SOURCE_DIR}/resources/darkicons"
